[tool.poetry]
name = "earnestly_equitable"
version = "0.0.1"
description = "splitwise integration for % equal + % proportional to income grocery/rent/durable group expense reimbursements"
authors = ["earnest co"]

[tool.poetry.dependencies]
python = "^3.9"
#splitwise = "^2.2.0"
Flask = "^1.1.2"
gunicorn = "^20.1.0"
requests-oauthlib = "^1.3.0"
maya = "^0.6.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.790"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pylint = "^2.6.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
